# markdown2confluence

./: .dockerignore  .gptcontext  CODEOWNERS  Dockerfile  Pipfile  README.md  action.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: md2confluence.yml  publish-container-image.yaml  test.yaml
docs/github/: md2confluence.yml  md2confluenceUsingAction.yml
markdown2confluence/: __init_.py  api.py  config.py  confluence.py  content_tree.py  converter.py  file_manager.py  logo.py  main.py  parser.py  publisher.py  util.py
markdownsample/: .confluenceignore
markdownsample/ignored-folder/: ignored-file.md
publisher/: Dockerfile  main.py  pagesController.py  pagesPublisher.py  pages_controller.py  pages_publisher.py  requirements.txt
publisher/config/: get_config.py
tests/unit/: test_api.py  test_confluence_publish_content.py  test_content_tree.py  test_parser.py  test_publisher.py
